--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
   "devDependencies": {
     "@babel/core": "7.3.4",
     "@babel/plugin-proposal-class-properties": "7.3.4",
-    "@babel/preset-env": "7.3.4"
+    "@babel/preset-env": "7.3.4",
+    "babel-eslint": "10.0.1",
+    "eslint": "5.15.0",
+    "eslint-config-standard": "12.0.0",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-node": "8.0.1",
+    "eslint-plugin-promise": "4.0.1",
+    "eslint-plugin-standard": "4.0.0"
   }
 }
