--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Filipe Teixeira <filipebarrosteixeira98@gmail.com>",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
     "@babel/core": "7.3.4",
     "@babel/plugin-proposal-class-properties": "7.3.4",
